test/captureAssign2.slq

def main(){
	x:=0:ğ”¹;
	def foo(){
		x=1; /// error
	}
	return x;  /// error
}
